# pennytrading-bot

./: .env.example  .gitignore  CURRENT_TRADING_STRATEGY_AND_EXPERT_ASSESSMENT.md  Cargo.toml  Dockerfile  README.md  config.yaml
.github/workflows/: package.yml
src/: analytics.rs  config.rs  dashboard.rs  database.rs  events.rs  kelly.rs  main.rs  models.rs  polymarket.rs  strategy.rs  trader.rs
tests/: database_tests.rs  kelly_tests.rs  strategy_tests.rs
